Lesson 10: add cart (web and api) (#10)
* Lesson 10: add cart (web and api)

* Lesson 10: fix errors
